Fix Railway healthcheck - add ping endpoint and better error handling

--- a/railway.toml
+++ b/railway.toml
@@ -2,8 +2,8 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "python advanced_google_scraper.py"
-healthcheckPath = "/"
+startCommand = "python simple_railway_app.py"
+healthcheckPath = "/ping"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 10
